<resources>
    <string name="app_name">AndroidSharedPreference</string>
    <string name="person_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="your_phone_number">Your number</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="clear">Clear</string>
    <string name="retrieve">Retrieve</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="second_activity">Second Activity</string>
</resources>